comment fix , add author&file to handler , fix test
