# docs/swagger.json
@@ -899,14 +899,14 @@
                 }
             }
         },
-        "/purchase/api/file/{file}": {
+        "/purchase/api/file/{fileID}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Find purchases by file name",
+                "description": "Find purchases by file id",
                 "consumes": [
                     "application/json"
                 ],
@@ -916,12 +916,12 @@
                 "tags": [
                     "purchase"
                 ],
-                "summary": "FindByFileName",
+                "summary": "FindByFileID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "File name",
-                        "name": "file",
+                        "description": "File id",
+                        "name": "fileID",
                         "in": "path",
                         "required": true
                     }
@@ -1237,14 +1237,14 @@
                 }
             }
         },
-        "/purchase/api/user/{id}/file/{file}": {
+        "/purchase/api/user/{userID}/file/{fileID}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Find purchases by user id and file name",
+                "description": "Find purchases by user id and file id",
                 "consumes": [
                     "application/json"
                 ],
@@ -1254,19 +1254,19 @@
                 "tags": [
                     "purchase"
                 ],
-                "summary": "FindByUserIDAndFileName",
+                "summary": "FindByUserIDAndFileID",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "User id",
-                        "name": "id",
+                        "name": "userID",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "File name",
-                        "name": "file",
+                        "description": "File id",
+                        "name": "fileID",
                         "in": "path",
                         "required": true
                     }
@@ -1593,9 +1593,9 @@
                     "description": "required: true",
                     "type": "string"
                 },
-                "fileName": {
+                "fileID": {
                     "description": "required: true",
-                    "type": "string"
+                    "type": "integer"
                 },
                 "userID": {
                     "description": "required: true",
@@ -1648,8 +1648,8 @@
                 "date": {
                     "type": "string"
                 },
-                "fileName": {
-                    "type": "string"
+                "fileID": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
